[project]
name = "xnoxs-dork"
version = "3.0.0"
description = "SQL Injection & XSS Vulnerability Scanner - Security Research Tool"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
    "xnoxs-engine>=2.0.0"
]

[project.scripts]
xnoxs-dork = "xnoxs_dork:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["xnoxs_dork"]
